# blue-vending

./: README.md  docker-compose.yml
back-end/: Dockerfile  app.py  docker-compose.yml  pyproject.toml  rest-client.http
back-end/database/: mongo.py
back-end/models/: products.py
back-end/mongo_image/: Dockerfile  seed_data.js
back-end/routes/: products.py
blue-vending-app/: Dockerfile  package-lock.json  package.json
blue-vending-app/atoms/: CartItemsAtom.js
blue-vending-app/components/: Cart.js  Header.js  ProductCard.js  Products.js
blue-vending-app/hooks/: useFetch.js
blue-vending-app/pages/: _app.js  checkout.js  index.js
blue-vending-app/util/: calculateChange.js  mockMoney.js
