[tool.poetry]
name = "blue-vending-api"
version = "0.1.0"
description = "CRUD Operations API for blue vending machine"
authors = ["Chaiyatorn Niamrat"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
motor = "^2.5.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pycodestyle = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
